Fix link autocomplete results not being visible

--- a/app/javascript/src/tailwind/components/card.css
+++ b/app/javascript/src/tailwind/components/card.css
@@ -1,5 +1,5 @@
 .card {
-  @apply bg-white shadow rounded p-4 border border-gray-400 overflow-hidden;
+  @apply bg-white shadow rounded p-4 border border-gray-400;
 
   .card-head {
     @apply flex items-center justify-between;
